--- a/Artful-Adventures/ArtfulAdventures.Web/appsettings.json
+++ b/Artful-Adventures/ArtfulAdventures.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ArtfulAdventures.Web-9a052780-e54f-4bee-98c3-969da4d7c7d6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\SoftUniCoursesDB;Database=ArtfulAdventures;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
