--- a/Artful-Adventures/ArtfulAdventures.Data.Models/ArtfulAdventures.Data.Models.csproj
+++ b/Artful-Adventures/ArtfulAdventures.Data.Models/ArtfulAdventures.Data.Models.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.18" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.18" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ArtfulAdventures.Common\ArtfulAdventures.Common.csproj" />
   </ItemGroup>
 
