--- a/Artful-Adventures/ArtfulAdventures.Web/ArtfulAdventures.Web.csproj
+++ b/Artful-Adventures/ArtfulAdventures.Web/ArtfulAdventures.Web.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\ArtfulAdventures.Common\ArtfulAdventures.Common.csproj" />
     <ProjectReference Include="..\ArtfulAdventures.Data.Models\ArtfulAdventures.Data.Models.csproj" />
     <ProjectReference Include="..\ArtfulAdventures.Data\ArtfulAdventures.Data.csproj" />
+    <ProjectReference Include="..\ArtfulAdventures.Services.Data\ArtfulAdventures.Services.Data.csproj" />
     <ProjectReference Include="..\ArtfulAdventures.Web.ViewModels\ArtfulAdventures.Web.ViewModels.csproj" />
   </ItemGroup>
 
