update-tons of stuff cause i forgot to upload lmao

--- a/Artful-Adventures/ArtfulAdventures.Web/appsettings.json
+++ b/Artful-Adventures/ArtfulAdventures.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\SoftUniCoursesDB;Database=ArtfulAdventures;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\SoftUniCoursesDB;Database=ArtfulAdventures;Trusted_Connection=True;",
+    "ArtfulAdventuresDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ArtfulAdventures.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
