--- a/Artful-Adventures/ArtfulAdventures.Services.Data/ArtfulAdventures.Services.Data.csproj
+++ b/Artful-Adventures/ArtfulAdventures.Services.Data/ArtfulAdventures.Services.Data.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\ArtfulAdventures.Common\ArtfulAdventures.Common.csproj" />
     <ProjectReference Include="..\ArtfulAdventures.Data.Models\ArtfulAdventures.Data.Models.csproj" />
     <ProjectReference Include="..\ArtfulAdventures.Data\ArtfulAdventures.Data.csproj" />
+    <ProjectReference Include="..\ArtfulAdventures.Services.Common\ArtfulAdventures.Services.Common.csproj" />
     <ProjectReference Include="..\ArtfulAdventures.Web.ViewModels\ArtfulAdventures.Web.ViewModels.csproj" />
   </ItemGroup>
 
